[package]
name = "armature-events"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Event bus and pub/sub for Armature applications"
keywords = ["events", "pubsub", "messaging", "async"]
categories = ["web-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dashmap = "5.5"
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

