[package]
name = "armature-eventsourcing"
version = "0.1.0"
edition = "2024"

[dependencies]
armature-events = { path = "../armature-events" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"

