[package]
name = "armature-graphql"
version = "0.1.0"
edition = "2024"
description = "GraphQL support for Armature framework"

[dependencies]
armature-core = { path = "../armature-core" }
armature-log = { path = "../armature-log" }
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

