[package]
name = "armature-jwt"
version = "0.1.0"
edition = "2024"
description = "JWT authentication and authorization for Armature framework"

[dependencies]
armature-core = { path = "../armature-core" }
armature-log = { path = "../armature-log" }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"

