[package]
name = "armature-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Logging utilities for the Armature framework"
keywords = ["logging", "debug", "tracing", "armature"]
categories = ["development-tools::debugging"]

[features]
default = ["json"]
# Enable tracing integration
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Enable colored output
color = ["dep:colored"]
# Enable JSON logging format (enabled by default for structured logging)
json = ["dep:serde_json", "dep:serde"]

[dependencies]
log = "0.4"
once_cell = "1.19"
chrono = "0.4"

# Optional dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
colored = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

