[package]
name = "armature-macros-utils"
version = "0.1.0"
edition = "2024"
description = "Utility macros for the Armature framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

