[package]
name = "armature-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Declarative macros for Armature framework"
keywords = ["macros", "framework", "web"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.1.0" }
serde_json = "1.0"

