[package]
name = "armature-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Message broker integrations for the Armature framework - RabbitMQ, Kafka, NATS, and AWS SQS/SNS"
keywords = ["messaging", "rabbitmq", "kafka", "nats", "sqs"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
full = ["rabbitmq", "kafka", "nats", "aws"]
rabbitmq = ["lapin"]
kafka = ["rdkafka"]
nats = ["async-nats"]
aws = ["aws-config", "aws-sdk-sqs", "aws-sdk-sns"]

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# RabbitMQ
lapin = { version = "2.3", optional = true }

# Kafka
rdkafka = { version = "0.38", features = ["cmake-build"], optional = true }

# NATS
async-nats = { version = "0.38", optional = true }

# AWS SQS/SNS
aws-config = { version = "1.5", optional = true }
aws-sdk-sqs = { version = "1.50", optional = true }
aws-sdk-sns = { version = "1.54", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
