[package]
name = "armature-metrics"
version = "0.1.0"
edition = "2024"
description = "Prometheus metrics and monitoring for Armature"
license = "MIT OR Apache-2.0"
repository = "https://github.com/armature-rs/armature"

[dependencies]
armature-core = { path = "../armature-core" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.19"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

