[package]
name = "armature-openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
armature-core = { path = "../armature-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Utilities
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

