[package]
name = "armature-opentelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
armature-core = { path = "../armature-core" }

# OpenTelemetry core
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.14"

# Tracing
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics", "logs"], optional = true }
opentelemetry-jaeger = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry-zipkin = { version = "0.20", features = ["reqwest-client"], optional = true }

# Metrics
opentelemetry-prometheus = { version = "0.15", optional = true }

# Logging
opentelemetry-appender-tracing = { version = "0.3", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", optional = true }
tonic = { version = "0.12", optional = true }

# Utilities
once_cell = "1.19"
thiserror = "2.0"

[features]
default = ["otlp"]
otlp = ["opentelemetry-otlp", "tonic"]
jaeger = ["opentelemetry-jaeger"]
zipkin = ["opentelemetry-zipkin", "reqwest"]
prometheus = ["opentelemetry-prometheus"]
logging = ["opentelemetry-appender-tracing"]
full = ["otlp", "jaeger", "zipkin", "prometheus", "logging"]

