[package]
name = "armature-queue"
version = "0.1.0"
edition = "2024"
authors = ["Armature Contributors"]
description = "Job queue and background processing for Armature framework"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Redis for queue backend - uses armature-redis for DI integration
armature-redis = { path = "../armature-redis" }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# DI integration
armature-core = { path = "../armature-core" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

